array.island.Island.scala.error
Compilation error:
Island:7: error: type mismatch;
 found   : Array[Int]
 required: String
      liste = liste + Array(num(i))
                           ^